# HelloWorldPython

./: .gitignore  README.md
argparse/: .gitignore  args.py  build.sh  main.py
argparse/pkg/: pkg.py
celery_demo/: .gitignore  README.md  calling_demo_task.py  openmetrics.data  pyproject.toml  start_worker.sh  test.data
celery_demo/demo/: __init__.py  celery.py  docker.py  sign.py  tasks.py
celery_test/: pyproject.toml
celery_test/distributed_tasks/: celery.py  tasks.py
couroutine/: PythonsFather.py  async.py  cotoutine_task.py  what_is_generator.py  yield_from.py
couroutine/asyncio/: send_recv.py  spiner_asyncio.py  text  what_is_event_loop.py
couroutine/future/: future.py
data-analyse/: .gitignore  main.py  pyproject.toml  requirements.txt
data-analyse/csv/: main.py
data-analyse/date/: main.py
decorator/: clockdeco.py  clockdeco_demo.py  logdeco.py  registrydeco.py
deploy/: docker-compose.dev.yml  docker-compose.yml
design_pattern/: singleton.py  singleton_variant.py
design_pattern/deploy/: Dockerfile  docker-compose.yml
exception/: assert.py  multiprocess.py
flask/: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements-snake.txt  requirements.txt
flask/.devcontainer/: devcontainer.json
flask/deploy/: Dockerfile  docker-compose.yml
flask/flaskr/: __init__.py  blueprint.py
flask/flaskr/api/: user.py
flask/flaskr/auth/: __init__.py  decorator.py
flask/flaskr/configs/: config.py
flask/flaskr/databases/: minio.py  models.py  mongodb.py  sqlalchemy.py
flask/flaskr/middleware/: auth.py
flask/flaskr/validators/: forms.py
flask/migrations/versions/: 992cdfa1d0fb_.py  bf145247003e_.py
flask/tests/: app_test.py
gdb/: coredump_guard.py  gdb.py  main.py
gevent/: main.py
git-demo/: git_util.py  pyproject.toml  remove_minio_dir.py
goodtable/: 2  UIImage_Client_pye2yc56.csv  UIImage_khsped5x.csv  __init__.py  comparison.py  main.py  parsetable.py  ruler_cmp.csv  ruler_std.csv
goodtable/tables/Settings/Table/: AccessoryMakeUp_Server.tab  Achievement.tab  Achievement_Server.tab  ActivityControl.tab  ArmedAccessory_Client.tab  AuraComponent_Client.tab  AvgWonAILevel_Server.tab  AwardSource.tab  Bag.tab  Bag_Client.tab  BattleCondition_Server.tab  BattlePass_Client.tab  BattleReward_Server.tab  BigMapObjectsIncubatorConfig.tab  BpWeekTask.tab  ClientEffectQualitySetting.tab  ComposeNpcComponent_Server.tab  ConfigFiles_Client.tab  Core_Client.tab  Currency.tab  Currency_Client.tab  Currency_Server.tab  CustomScore_Client.tab  DesktopAdapter_Client.tab  DeviceCPUScore.tab  DeviceVideoCardScore_Server.tab  DirectPurchase.tab  DiyMaterial_Client.tab  Doodad_Client.tab  Drop_Server.tab  EquipMakeUp.tab  GMCommand.tab  GMCommand_Client.tab  GachaControl.tab  GachaPool.tab  GameModes.tab  Gameplay.tab  (+124 more)
locust/: main.py  pyproject.toml
model/: pyproject.toml
model/schematic/: main.py
mysql/: migrate_mysql_row.py  mysql_to_csv.py  pyproject.toml
python/: args.py
quant-demo/: README.md  log.py  main.py  pyproject.toml
socket/: socket_server.py
spicedb/: .gitignore  10.11.11.213:50051.zed  collection.zed  main.py  migrate.py  migrate_11.213.py  permission.zed  pyproject.toml  requirements.txt  snake.zed  spicedb.py
spicedb/migrate/: 89.55-20240122040332.zed  relationships-20240122040332.zed  relationships-new-20240122040332.zed
temporal/: statistic_workflow_failure_rate.py
(+3 files in other folders)
