[tool.poetry]
name = "celery-test"
version = "0.1.0"
description = ""
authors = ["youling <youling66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
docker = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
