[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["youling66 <youling15122511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
amqp = "5.0.5"
asgiref = "3.3.1"
babel = "2.9.0"
bcrypt = "3.2.0"
billiard = "3.6.3.0"
blinker = "1.4"
boto3 = "1.17.41"
botocore = "1.20.41"
celery = "5.0.5"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
click = "7.1.2"
click-didyoumean = "0.0.3"
click-plugins = "1.1.1"
click-repl = "0.1.6"
django = "3.1.7"
dnspython = "2.1.0"
docker = "4.4.4"
email-validator = "1.1.2"
flask = "1.1.2"
flask-admin = "1.5.7"
flask-babelex = "0.9.4"
flask-cors = "3.0.10"
flask-mail = "0.9.1"
flask-mongoengine = "^1.0.0"
flask-principal = "0.4.0"
flask-sockets = "0.2.1"
flask-wtf = "0.14.3"
future = "0.18.2"
gevent = "21.1.2"
gevent-websocket = "0.10.1"
greenlet = "1.0.0"
gunicorn = "20.1.0"
idna = "2.10"
itsdangerous = "1.1.0"
jinja2 = "2.11.3"
jmespath = "0.10.0"
kombu = "5.0.2"
markupsafe = "1.1.1"
minio = "4.0.20"
mysql-connector-python = "8.0.33"
passlib = "1.7.4"
pillow = "8.1.2"
pip = "20.3.3"
prompt-toolkit = "3.0.18"
protobuf = "3.20.3"
psutil = "5.8.0"
pycparser = "2.20"
pydantic = "1.8.1"
pygrok = "1.0.0"
pymongo = "3.11.3"
python-dateutil = "2.8.1"
pytz = "2021.1"
qrcode = "6.1"
redis = "3.5.3"
redisorm = "0.1.0"
regex = "2021.3.17"
werkzeug = "1.0.1"
flask-sqlalchemy = "2.5.1"
flask-migrate = "^4.0.7"
sqlalchemy = "1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
