[tool.poetry]
name = "model"
version = "0.1.0"
description = "数据结构pydantic、schematic等库的实践"
authors = ["youling66 <youling66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
schematics = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
