[tool.poetry]
name = "mysql-migration"
version = "0.1.0"
description = ""
authors = ["youling66 <youling15122511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
