[tool.poetry]
name = "quant-demo"
version = "0.1.0"
description = ""
authors = ["youling66 <youling66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rqdatac = "^3.0.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
