[tool.poetry]
name = "spicedb"
version = "0.1.0"
description = ""
authors = ["youling66 <youling66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
authzed = "^0.13.0"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
